--- a/templates/index.html
+++ b/templates/index.html
@@ -102,6 +102,9 @@
                         <button class="btn btn-hint-small" data-hint-type="general">General Hint</button>
                         <button class="btn btn-hint-small" data-hint-type="specific">Specific Hint</button>
                         <button class="btn btn-hint-small" data-hint-type="next_step">Next Step</button>
+                        <button class="btn btn-hint-small btn-visualize" id="visualizeAlgoBtn" title="Generate step-by-step visual diagram">
+                            📊 Visualize Algorithm
+                        </button>
                         <button class="btn btn-hint-small btn-solution" id="showSolutionBtn" title="View the complete solution code">
                             💻 Show Solution
                         </button>
